--- a/style.css
+++ b/style.css
@@ -10,5 +10,48 @@ html, body {
   width: 100%;
   height: 100%;
   font-family: 'Merriweather', serif;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Raleway', sans-serif;}
+h1 {
+  font-size: 1.5em;
+  padding-left: 1em;
+  padding-right: 1em;
+}
+.grid-container {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(12, minmax(1fr, auto));
+  grid-template-rows: repeat(1, 1fr);
+  grid-template-areas:
+  "s s s s a a a a a a a a";
+  margin-top: 75px;
+  }
+.sidebar {
+  position: fixed;
+  top: 0;
+  grid-area: s;
+  align-items: center;
+  background-color:blue;
+}
+.articles {
+  grid-area: a;
+}
+.footer {
+  grid-area: f;
+}
+@media screen and (max-width: 854px) {
+ /* .grid-container {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(12, minmax(1fr, auto));
+    grid-template-rows: repeat(6, auto);
+    grid-template-areas:
+    "s s s s s s s s s s s s"
+    "s s s s s s s s s s s s"
+    "e e e e e e e e e e e e"
+    "o o o o o o o o o o o o"
+    "p p p p p p p p p p p p"
+    "f f f f f f f f f f f f";
+    margin-top: 75px;
+    }*/
+  
 }
