--- a/style.css
+++ b/style.css
@@ -16,82 +16,61 @@ h1 {
   padding-left: 1em;
   padding-right: 1em;
 }
-.grid-container {
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(1, 1fr);
-  grid-template-areas:
-  "s s m m m m";
-  margin-top: 75px;
-  }
 .sidebar {
-  position: relative;
-  grid-area: s;
-  align-items: center;
-  height: 100%;
-  width: calc(100% / 4);
+  position:fixed;
+  top: 0;
+  width: calc(100%, 3);
+  /*width: calc(100% / 4);*/
+  margin: 15px 15px 15px 15px;
+  background-color: white;
 }
 .navigation {
-  padding-left:2em;
+  display: flex;
+  flex-direction: column;
+  padding-left:1em;
 }
-.articles {
-grid-area: m;
-justify-self: end;
-width: calc(250% / 3);
+#navbar a {
+  margin-bottom: 10px; 
+  margin-top: 10px; 
 }
-.main-doc {
-}
-.main-section {
-  margin: 2em;
-}
-.footer {
-  grid-area: f;
-}
-@media screen and (max-width: 960px) {
- /* .grid-container {
+#navheader {text-align: center;}
+#articles {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-areas:
+    ". m";
+  }
+#container {
+    grid-area: m;
+    margin: 15px 15px 15px 15px;
+  }
+@media screen and (max-width: 690px) {
+  .navigation {
+    display: flex;
+    flex-direction: row;
+    padding-left:1em;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: white;
+    z-index: 10;
+  }
+  #articles {
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(12, minmax(1fr, auto));
-    grid-template-rows: repeat(6, auto);
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 95px auto;
     grid-template-areas:
-    "s s s s s s s s s s s s"
-    "s s s s s s s s s s s s"
-    "e e e e e e e e e e e e"
-    "o o o o o o o o o o o o"
-    "p p p p p p p p p p p p"
-    "f f f f f f f f f f f f";
-    margin-top: 75px;
-    }*/
-
-    .sidebar {
-      width: calc(100% / 3);
+      "s s"
+      "m m";
     }
-    .main-section {
-      width: calc(250% / 4);
-    }     
-}
-
-/*@media screen and (max-width: 680px) {
-
-  .grid-container {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: auto auto;
-  grid-template-areas:
-  "s"
-  "m";
-  }
   .sidebar {
-    position: unset;
+    position:fixed;
     top: 0;
-    grid-area: s;
-    align-items: center;
-    justify-self: center;
-    height: 100%;
-    width: 50%;
-    margin-bottom: 2em;;
+    width: 100%;
+    height: 90px;
+    /*width: calc(100% / 4);*/
+    margin: 0px 15px 15px 15px;
+    background-color: white;
+  }    
   }
-  
-}
-*/
