--- a/style.css
+++ b/style.css
@@ -13,8 +13,9 @@ html, body {
   font-family: 'Raleway', sans-serif;}
 h1 {
   font-size: 1.5em;
-  padding-left: 1em;
-  padding-right: 1em;
+}
+h2 {
+  font-size: 1em;
 }
 .sidebar {
   position:fixed;
@@ -45,6 +46,9 @@ h1 {
     grid-area: m;
     margin: 15px 15px 15px 15px;
   }
+.main-section {
+  margin-bottom: 1em;
+}
 @media screen and (max-width: 690px) {
   .navigation {
     display: flex;
