--- a/style.css
+++ b/style.css
@@ -78,3 +78,16 @@ h2 {
     background-color: white;
   }    
   }
+  @media screen and (max-width: 575px) {
+    .navigation {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      padding-left:1em;
+      padding-top: 10px;
+      padding-bottom: 10px;
+      background-color: white;
+      z-index: 10;
+    }
+  
+}
